name: Adventure
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Network
synopsis: Multiple-choice adventure game system.  Module for FruitTart.
description:
  Adventure is a multiple-choice adventure game construction framework.
  
  Adventure is a module for FruitTart, the framework for database-backed websites.

Library
  exposed-modules: Main
  other-modules: Network.FruitTart.Adventure.Controller.Adventure
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0 && < 2,
                 FruitTart-Base >= 1.0 && < 2
