name: FruitTart-Base
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: Template-based content and customization of it.  Module for FruitTart.
description:
  This FruitTart module provides template-based content and facilities for users to
  edit and customize it.  It is used by most other substantial FruitTart modules.
  
  Its features include:
  
  A template system with a built-in mini-language.  The template system includes a
  web-based editor which makes it possible to build many plugins without writing a
  single line of Haskell.
  
  A user system; the ability to log in and out, and change account information and
  passwords.  The system is extensible so that other modules can piggyback on top of it,
  adding whatever semantics and privileges they wish.
  
  A navigation bar that displays at the top of the page.  This is useful for a large
  site with many FruitTart modules installed.
  
  A message that displays at the top of the next page a user views.  This is useful for
  short status or confirmation messages that are best displayed inline with whatever
  else the user is doing, rather than interrupting browsing with an interstitial page.

Library
  exposed-modules: Main,
                   Network.FruitTart.Base.Templates.Types,
                   Network.FruitTart.Base.View.Login,
                   Network.FruitTart.Base.View.Navigation,
                   Network.FruitTart.Base.View.PopupMessage,
                   Network.FruitTart.Base.View.Templates
  other-modules: Network.FruitTart.Base.Controller.Login,
                 Network.FruitTart.Base.Controller.Templates,
                 Network.FruitTart.Base.Controller.Queries,
                 Network.FruitTart.Base.Templates.Semantics,
                 Network.FruitTart.Base.Templates.Syntax
  build-depends: base >= 4.1 && < 5,
                 array >= 0.2.0.0,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 
                 cgi >= 3001.1.7.1,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0 && < 2
