name: FruitTart-Blog
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: Blog engine.  Module for FruitTart.
description:
  FruitTart-Blog is an engine to run a single-owner blog website.  It supports
  comments, trackbacks, full-text search, and the Atom syndication format.
  
  FruitTart-Blog is a module for FruitTart, the framework for database-backed websites.

Library
  exposed-modules: Main
  other-modules: Network.FruitTart.Adventure.Controller.Adventure
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0 && < 2,
                 FruitTart-Base >= 1.0 && < 2
