name: Buglist
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: Issue-tracking database, for managing software projects.  Based on FruitTart.
description:
  Buglist is an issue-tracking database, for managing software projects.  It is
  implemented in pure Haskell and has a web-facing interface.  It uses SQLite3 for all
  storage, and connects to a webserver using FastCGI.  It is intended to be more suited
  to small-scale development than a huge thing like Bugzilla would be.
  
  Buglist is based on FruitTart, the framework for database-backed websites.

Library
  exposed-modules: Main
  build-depends: base >= 4.1 && < 5,
                 
                 Crypto >= 4.2.0,
                 fastcgi >= 3001.0.2.2,
                 cgi >= 3001.1.7.1,
                 utf8-string >= 0.3.5,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0
