name: Buglist
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: Issue-tracking database, for managing software projects.  Module for FruitTart.
description:
  Buglist is an issue-tracking database, for managing software projects.  It is
  implemented in pure Haskell and has a web-facing interface.  It uses SQLite3 for all
  storage, and connects to a webserver using FastCGI.  It is intended to be more suited
  to small-scale development than a huge thing like Bugzilla would be.
  
  Buglist is a module for FruitTart, the framework for database-backed websites.

Library
  exposed-modules: Main
  other-modules: Network.FruitTart.Buglist.Controller.Issues,
                 Network.FruitTart.Buglist.Controller.Synchronization,
                 Network.FruitTart.Buglist.Controller.Users,
                 Network.FruitTart.Buglist.View.Navigation
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0 && < 2,
                 FruitTart-Base >= 1.0 && < 2,
                 FruitTart-Captcha >= 1.0 && < 2
