name: FruitTart
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: A framework for database-backed websites.
description:
  FruitTart is a framework for database-backed websites.  It supports a controller/action
  design similar to that of Ruby on Rails or CakePHP.

Executable FruitTart
  main-is: Main.hs
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 haskell98,
                 mtl >= 1.1.0.2,
                 old-time >= 1.0.0.2,
                 
                 cgi >= 3001.1.7.1,
                 fastcgi >= 3001.0.2.2,
                 utf8-string >= 0.3.5,
                 
                 direct-sqlite >= 1.0,
                 hs-captcha >= 1.0,
                 FruitTartInterface >= 1.0 && < 2
  extra-libraries: sqlite3
