name: FruitTart
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Network
synopsis: A framework for database-backed websites.
description:
  FruitTart is a framework for database-backed websites.  It supports a controller/action
  design similar to that of Ruby on Rails or CakePHP.

Executable FruitTart
  main-is: Main.hs
  other-modules: Network.FruitTart.Dispatcher,
                 Network.FruitTart.Types,
                 Network.FruitTart.Util,
                 Network.FruitTart.Util.Database,
                 Network.FruitTart.Custard.Semantics,
                 Network.FruitTart.Custard.Syntax,
                 Network.FruitTart.Custard.Functions.Util,
                 Network.FruitTart.Custard.Functions.General,
                 Network.FruitTart.Custard.Functions.Symbols,
                 Network.FruitTart.Custard.Functions.HTTP,
                 Network.FruitTart.Custard.Functions.Forms,
                 Network.FruitTart.Custard.Functions.Sessions,
                 Network.FruitTart.Custard.Functions.Captchas,
                 Network.FruitTart.Custard.Functions.Passwords,
                 Network.FruitTart.Custard.Functions.Lists,
                 Network.FruitTart.Custard.Functions.Strings,
                 Network.FruitTart.Custard.Functions.Maps,
                 Network.FruitTart.Custard.Functions.Data
  build-depends: base >= 4.1 && < 5,
                 array >= 0.2.0.0,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 haskell98,
                 mtl >= 1.1.0.2,
                 network >= 2.2.1.7,
                 time >= 1.1.4,
                 old-time >= 1.0.0.4,
                 old-locale >= 1.0.0.1,
                 
                 Crypto >= 4.2.0,
                 utf8-string >= 0.3.5,
                 
                 direct-fastcgi >= 1.0.1,
                 direct-sqlite >= 1.0,
                 hs-captcha >= 1.0
  extra-libraries: sqlite3
