name: FruitTartInterface
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: Plugin API to a framework for database-backed websites.
description:
  FruitTart is a framework for database-backed websites.  It supports a controller/action
  design similar to that of Ruby on Rails or CakePHP.  This package is the API for
  plugins to it.

Library
  exposed-modules: Network.FruitTart.PluginInterface
  build-depends: base >= 4.1 && < 5,
                 containers >= 0.2.0.1,
                 
                 direct-sqlite >= 1.0
