name: FruitTartInterface
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: Plugin API to a framework for database-backed websites.
description:
  FruitTart is a framework for database-backed websites.  It supports a controller/action
  design similar to that of Ruby on Rails or CakePHP.  This package is the API for
  plugins to it.

Library
  exposed-modules: Network.FruitTart.PluginInterface,
                   Network.FruitTart.Util
  other-modules: Network.FruitTart.Util.Database,
                 Network.FruitTart.Util.HTML,
                 Network.FruitTart.Util.Lists,
                 Network.FruitTart.Util.Log,
                 Network.FruitTart.Util.Passwords,
                 Network.FruitTart.Util.Text,
                 Network.FruitTart.Util.Types
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.5,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 old-locale >= 1.0.0.1,
                 time >= 1.1.4,
                 
                 Crypto >= 4.2.0,
                 cgi >= 3001.1.7.1,
                 fastcgi >= 3001.0.2.2,
                 utf8-string >= 0.3.5,
                 
                 direct-sqlite >= 1.0
