name: FruitTartInterface
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Network
synopsis: Plugin API to a framework for database-backed websites.
description:
  FruitTart is a framework for database-backed websites.  It supports a controller/action
  design similar to that of Ruby on Rails or CakePHP.  This package is the API for
  plugins to it.

Library
  exposed-modules: Network.FruitTart.Base,
                   Network.FruitTart.Util
  other-modules: Network.FruitTart.Util.Database,
                 Network.FruitTart.Util.HTML,
                 Network.FruitTart.Util.Lists,
                 Network.FruitTart.Util.Passwords,
                 Network.FruitTart.Util.Text,
                 Network.FruitTart.Util.Types
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 time >= 1.1.4,
                 old-locale >= 1.0.0.1,
                 
                 Crypto >= 4.2.0,
                 utf8-string >= 0.3.5,
                 
                 direct-fastcgi >= 1.0.1,
                 direct-sqlite >= 1.0
