name: FruitTart-Navigation
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: A navigation bar at the top of the page.  Module for FruitTart.
description:
  This FruitTart module provides a navigation bar that displays at the top of the
  page, given templates that support it.  It is useful for a large site with many
  FruitTart modules installed.  It is used by most other substantial FruitTart
  modules.

Library
  exposed-modules: Main,
                   Network.FruitTart.Navigation.View.Navigation
  build-depends: base >= 4.1 && < 5,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0 && < 2
