name: FruitTart-PopupMessage
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: A message that displays at the top of the next page.  Module for FruitTart.
description:
  This FruitTart module provides a message that displays at the top of the next page a
  user views, given templates that support it.  It is useful for short status or
  confirmation messages that are best displayed inline with whatever else the user is
  doing, rather than interrupting browsing with an interstitial page.  It is used by
  most other substantial FruitTart modules.

Library
  exposed-modules: Main,
                   Network.FruitTart.PopupMessage.View.PopupMessage
  build-depends: base >= 4.1 && < 5,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0 && < 2
