name: FruitTart-Templates
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Network
synopsis: Template-based content and customization of it.  Module for FruitTart.
description:
  This FruitTart module provides template-based content and facilities for users to
  edit and customize it.  It is used by most other substantial FruitTart modules.

Library
  exposed-modules: Main
  other-modules: Network.FruitTart.Templates.Controller.Templates,
                 Network.FruitTart.Templates.Imports
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.4,
                 containers >= 0.2.0.1,
                 mtl >= 1.1.0.2,
                 
                 direct-sqlite >= 1.0,
                 FruitTartInterface >= 1.0 && < 2
